--- a/404.html
+++ b/404.html
@@ -1,9 +1,5 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <!-- redirect to the app root under the repo path -->
-    <meta http-equiv="refresh" content="0; url=./" />
-  </head>
-  <body></body>
-</html>
+<!-- public/404.html -->
+<!doctype html><html><head><meta charset="utf-8">
+<meta http-equiv="refresh" content="0; url=/" />
+<script>location.replace("/" + location.hash.slice(1));</script>
+</head><body></body></html>
