--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
   <link rel="apple-touch-icon" href="icons/apple-touch-icon.png" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-  <meta name="theme-color" content="#0f172a" />
-
+  <meta name="theme-color" content="#ffffff" />
+  <script>
+    (function () {
+      const theme = localStorage.getItem('theme') || 'standard';
+      const colors = { standard: '#ffffff', dark: '#0f172a', neon: '#000000' };
+      document.documentElement.classList.add('theme-' + theme);
+      const meta = document.querySelector('meta[name="theme-color"]');
+      if (meta) meta.setAttribute('content', colors[theme]);
+    })();
+  </script>
 
   <title>Velvet Notes</title>
 </head>
