--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <!-- PWA: iOS friendly bits -->
-  <link rel="apple-touch-icon" href="icons/apple-touch-icon.png" />
+  <link rel="apple-touch-icon" href="/src/assets/logo.png" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="theme-color" content="#0f172a" />
-
+  <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/favicon-16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/favicon-32.png" />
+  <link rel="icon" type="image/png" sizes="48x48" href="/src/assets/favicon-48.png" />
+  <link rel="icon" type="image/png" sizes="64x64" href="/src/assets/favicon-64.png" />
+  <link rel="icon" type="image/x-icon" href="/src/assets/favicon.ico" />
 
   <title>Velvet Notes</title>
 </head>
